--- a/example/reference.toml
+++ b/example/reference.toml
@@ -37,7 +37,8 @@ destination = "aleph"
 # The last conduit named is automatically conected to the sink
 # The first named conduit is automcatically connected to the source
 [[conduit]]
-plugin = "alpha"
+label = "alpha"
+plugin = "noop"
 option_one = "fizz"
 option_two = "buzz"
 
@@ -46,18 +47,18 @@ terminate = false
 destination = "beta"
 
 [[conduit]]
-name = "beta"
+label = "beta"
+plugin = "noop"
 option_one = "fizz"
 option_two = "buzz"
 
 [[conduit.route]]
 terminate = true
 
-[sink]
-name = "kafka"
-default = true
+[sink.default]
+plugin = "kafka"
 
 [sink.aleph]
-name = "kafka"
+plugin = "kafka"
 option_one = "fizz"
 option_two = "buzz"
