--- a/example/reference.toml
+++ b/example/reference.toml
@@ -1,28 +1,16 @@
 # This is the reference pipeline configuration file.
 
 # The name of the pipeline is used for logging and reporting purposes
-pipe_name = "reference"
+name = "reference"
 
 # The source section defines the start of the pipeline. A source processor generates batches of messages
 # that are sent down the pipe. Only one source is permitted and is required. This example uses the 'kafka'
 # plugin. Consult the documentation for the option for this plugin
 [source]
 plugin = "tcp"
-
-[source.option]
 port = 515
 sock_buffer_size = 4096
 read_buffer_size = 8192
-
-# The source.route sections controls where data will be sent to next. Messages containing arbitrary json objects
-# are batched and sent to the destinations listed.
-[[source.route]]
-terminate = false # destination name is a conduit
-destination = "alpha"
-
-[[source.route]]
-terminate = true # destination name is a sink
-destination = "aleph"
 
 # if a conduit is named in any other processors destination, it is an error for them to have source set to true
 # a conduit may only send to conduits that are named after it. Sending to an earlier defined conduit produces
@@ -32,29 +20,16 @@ destination = "aleph"
 # The first named conduit is automcatically connected to the source
 [[conduit]]
 plugin = "noop"
-
-[conduit.option]
 option_one = "fizz"
 option_two = "buz"
 
-[[conduit.route]]
-terminate = false
-destination = "beta"
-
 [[conduit]]
 plugin = "grpc"
-
-[conduit.option]
 option_one = "fiz"
 option_two = "buzz"
 
-[[conduit.route]]
-terminate = true
-
-[sink.default]
+[sink.accept]
 plugin = "kafka"
-
-[sink.default.option]
 bootstrap_server = "bootstrap:9200"
 brokers = []
 topic_id = "sluus"
@@ -67,9 +42,7 @@ keepalive = 180
 io_timeout = 30
 required_acks = -1
 
-[sink.aleph]
+[sink.reject]
 plugin = "noop"
-
-[sink.aleph.option]
 option_one = "fizz"
 option_two = "buzz"
